<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".package2.LoginViewActivity">

    <TextView
        android:id="@+id/text_welcomeback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="Welcome Back 👋"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_loginwith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="Login With"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginHorizontal="35dp">

        <Button
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_bg"
            app:backgroundTint="@null"
            android:text="Google"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:width="120dp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rect_bg"
            app:backgroundTint="@null"
            android:text="Facebook"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:width="120dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_bg"
        android:hint="@string/txt_emailhint"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/neutral_grey"
        android:inputType="textEmailAddress"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:layout_marginVertical="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_bg"
        android:backgroundTint="@null"
        android:maxLines="1"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="8dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Forgot Password?"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginVertical="8dp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Remember Me"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginVertical="8dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="80dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_red_btn"
        app:backgroundTint="@null"
        />

</LinearLayout>
